objects/CN_CPPC_Oppty__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPPC Opptys</relationshipLabel>
        <relationshipName>CPPC_Opptys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Competitor_Product_Price_for_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product Price for Customer</label>
        <referenceTo>CN_Competitor_Product_Price_to_Customer__c</referenceTo>
        <relationshipLabel>CPPC Opptys</relationshipLabel>
        <relationshipName>CPPC_Opptys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CPPC Opptys</relationshipLabel>
        <relationshipName>CPPC_Opptys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CPPC Oppty</label>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>CPPC Oppty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPPC Opptys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>